# wingst-automation

./: .env-sample  .envrc  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  main.py  manage  pyproject.toml  requirements-dev.txt  requirements.txt
smartthings/: api.py  capabilities.py  commands.py  devices.py  exceptions.py
utils/: moving_average.py
wingst/: __init__.py  commander.py  devices.py  settings.py
