[tool.setuptools]
py-modules = []

[project]
name = "wingst-automation"
version = "1"
dependencies = [
    "python-dotenv==1.0.1",
    "requests==2.31.0",
    "tibber.py==0.4.0",
]

[project.optional-dependencies]
dev = [
    "black==24.2.0",
    "isort==5.13.2",
    "pre-commit==3.6.2",
    "pip-tools==7.4.0",
    "pip==24.0",
    "pytest==8.0.1",
    "pytest-django==4.8.0",
    "factory-boy==3.3.0",
    "Faker==23.2.1",
    "pytest-cov==4.1.0",
    "pytest-recording==0.13.1",
    "pytest-xdist==3.5.0"
]

[tool.pytest.ini_options]
python_files = "tests.py test_*.py *_tests.py"
DJANGO_SETTINGS_MODULE= "config.settings_testing"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "jwt_scope: sets required scope for api test",
]

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'
force-exclude = """
/(
    .git
  | .hg
  | .eggs
  | .mypy_cache
  | .tox
  | .venv
  | .venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
)/
"""

[tool.isort]
profile = "black"
line_length = 100
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
no_lines_before = "LOCALFOLDER"
skip_glob = ["*/migrations/*.py"]
src_paths = ["."]
known_thirdparty = ["django"]

[tool.coverage.run]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/prototypes/*",
    "*/site-packages/*",
    "*/test_*",
    "scripts/*",
    "docker/*",
    "config/*",
]

[tool.coverage.report]
precision = 2
